--- a/Gaming_App/src/main/resources/application.properties
+++ b/Gaming_App/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=Gaming_App
+
+spring.data.mongodb.uri= mongodb+srv://my_user:my_password123@cluster0.ziyxdyy.mongodb.net/gaming_db?retryWrites=true&w=majority
+server.port=${PORT:8080}
