--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=Gaming_App
 
-spring.data.mongodb.uri=${MONGO_UPI}
+spring.data.mongodb.uri=${MONGO_URI}
 server.port=${PORT:8080}
